# quillscribe

./: .gitignore  CMakeLists.txt  CMakePresets.json  QuillScribe.desktop  README.md  conanfile.py  vcpkg.json
.github/workflows/: build.yml
docs/: windows-build.md
scripts/: build-windows.bat  build-windows.ps1  build.sh  format-code.sh  git_manager.py  lint-code.sh  package-single-exe.sh  pre-commit-hook.sh  setup-whisper-models.sh  setup-wsl-audio.sh
specs/001-voice-to-text/contracts/: ai-enhancement-interface.h  audio-recording-interface.h  storage-interface.h  transcription-service-interface.h
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/lib/quill-audio/: AudioRecorderInterface.cpp
src/lib/quill-enhance/: TextEnhancementServiceInterface.cpp
src/lib/quill-storage/: StorageInterface.cpp
src/lib/quill-transcribe/: TranscriptionServiceInterface.cpp
src/models/: BaseModel.cpp  BaseModel.h  EnhancedText.cpp  EnhancedText.h  EnhancementProfile.cpp  EnhancementProfile.h  Recording.cpp  Recording.h  Transcription.cpp  Transcription.h  UserSession.cpp  UserSession.h
src/services/: AudioLevelIODevice.cpp  AudioLevelIODevice.h  AudioRecorderService.cpp  AudioRecorderService.h  ConfigurationManager.cpp  ConfigurationManager.h  ErrorHandler.cpp  ErrorHandler.h  StorageManager.cpp  StorageManager.h  TextEnhancementService.cpp  TextEnhancementService.h  TranscriptionService.cpp  TranscriptionService.h
tests/: CMakeLists.txt  test_helpers.h  test_main.cpp
tests/contract/: test_audio_recorder_contract.cpp  test_enhancement_service_contract.cpp  test_storage_manager_contract.cpp  test_transcription_service_contract.cpp
tests/integration/: test_ai_enhancement.cpp  test_device_language.cpp  test_offline_mode.cpp  test_recording_transcription.cpp  test_session_management.cpp
